--- a/pages/review.html
+++ b/pages/review.html
@@ -1332,7 +1332,13 @@
                         </button>
                         ${(() => { 
                             const local = (()=>{ try { return localStorage.getItem(`product_url_${review.id}`) || ''; } catch(e){ return ''; } })(); 
-                            const href = review.product_url || review.link || local; 
+                            let href = review.product_url || review.link || local; 
+                            
+                            // Fix link format - add https:// if missing
+                            if (href && !href.startsWith('http://') && !href.startsWith('https://')) {
+                                href = 'https://' + href;
+                            }
+                            
                             return href 
                                 ? `<a class=\"review-modal__btn\" href=\"${href}\" target=\"_blank\" rel=\"nofollow noopener noreferrer\">\n                                    <i class=\"fas fa-external-link-alt\"></i>\n                                    View Product\n                                   </a>` 
                                 : '';
